chore: model development tools as "test" scope; to avoid unnecessary deprecation/TestOnly/VisibleForTesting warnings